crates/eure-macros/tests/compile_fail/into_eure_flatten_not_supported.rs
use eure::IntoEure;

#[derive(IntoEure)]
struct Test {
    #[eure(flatten)]
    field: String,
}

fn main() {}
